fix dropdown event visible

--- a/src/components/ui/TooltipMenu/TooltipMenu.module.css
+++ b/src/components/ui/TooltipMenu/TooltipMenu.module.css
@@ -1,10 +1,11 @@
 .menuWrap:hover > .menuBox,
 .menuWrap:focus > .menuBox {
   @apply opacity-100 transition-opacity;
+  pointer-events: all;
 }
 
 .menuBox {
   box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.1);
-
+  pointer-events: none;
   @apply opacity-0;
 }
